# plugins-nixtla

./: .editorconfig  .flake8  .gist-id  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EDUCATIONAL_RESOURCES.md  EOD-REPORT-2025-12-03.md  FOR-MAX-QUICKSTART.md  GCP-SETUP-COMPLETE.md  GITHUB_DESCRIPTION.txt  README.md  REPO-STATUS-REPORT.md  ROADMAP.md  SECURITY.md  SUPPORT.md  analysis_report.txt  coverage.xml  plugins_inventory.csv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  skills_inventory.csv  structure-after-cleanup.txt  structure-before-cleanup.txt
.audit-harness/: CHANGELOG.md  README.md
.beads/: issues.jsonl  metadata.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.gemini/: config.yaml  style-guide.md
000-docs/: 001-DR-REFF-6767-canonical-document-reference-sheet.md  001-PP-PLAN-nixtla-collaboration-overview.md  002-AT-ARCH-plugin-architecture.md  002-PP-PLAN-nixtla-search-to-slack-mvp.md  003-AT-ARCH-search-to-slack-plugin-construction.md  004-OD-PRDESC-nixtla-search-to-slack-mvp.md  005-AT-ARCH-plugin-03-nixtla-roi-calculator.md  005-DR-META-document-standards.md  005-OD-RELS-v0-2-0-release.md  006-QA-TEST-nixtla-baseline-lab-test-coverage.md  007-OD-RELS-v0-7-0-nixtla-review-kit.md  008-AT-ARCH-plugin-06-nixtla-snowflake-adapter.md  009-AT-ARCH-plugin-01-nixtla-cost-optimizer.md  010-AT-ARCH-plugin-02-nixtla-vs-statsforecast-benchmark.md  012-PP-PROD-nixtla-plugin-suite-master-summary.md  016-AT-ARCH-plugin-08-nixtla-migration-assistant.md  017-AT-ARCH-plugin-09-nixtla-forecast-explainer.md  018-AA-AACR-phase-04-testing-and-skills.md  018-PP-PROD-nixtla-plugin-suite-master-summary.md  019-AA-SUMM-claude-skills-implementation-summary.md  020-AA-AACR-phase-06-ci-and-marketplace-hardening.md  022-AA-SUMM-marketplace-implementation-summary.md  024-AA-AUDT-appaudit-devops-playbook.md  024-OD-RELS-v0-2-0-release-session-summary.md  025-AT-ARCH-project-architecture.md  027-AA-AACR-phase-03-power-user-controls.md  027-UC-GUID-educational-resources.md  029-DR-GUID-marketplace-setup.md  030-OD-GUID-nixtla-playground-setup.md  031-AA-AACR-phase-05-repro-bundle-github-issues.md  035-PP-PROD-nixtla-plugin-business-case.md  036-AA-AUDT-directory-structure-audit-and-cleanup-plan.md  036-AA-AUDT-working-plugins-verification.md  037-DR-REFF-repository-directory-structure.md  038-AT-ARCH-nixtla-claude-skills-pack.md  039-PP-PLAN-nixtla-skills-4-phase-rollout.md  040-AA-REPT-nixtla-claude-skills-phase-04.md  041-AA-REPT-nixtla-skills-compliance-phase-01.md  041-SPEC-nixtla-skill-standard.md  042-AA-REPT-nixtla-skills-compliance-phase-01.md  (+138 more)
002-workspaces/: .directory-standards.md  README.md
004-scripts/: .script_generator_progress.json  .skill_generator_progress.json  add_scripts_to_skills.py  batch-remediate.py  compare_timegpt_vs_statsforecast.py  new-plugin.sh  overnight_skill_generator.py  setup-gcp-nixtla-playground.sh  validate-all-plugins.sh  validate-docs.sh  validate_command_agent_frontmatter.py  validate_skills.py  validate_skills_v2.py
005-plugins/: README.md
007-tests/: basic_validator.py  test_skills_installer_e2e.py
claudes-docs/: claude-skills-implementation-summary.md  educational-overview-enhancement.md  marketplace-implementation-summary.md  marketplace-setup-guide.md
demo-project/: .gitignore  README.md
docs/: plugins.md
plugin-docs/: nixtla-baseline-lab.md  nixtla-bigquery-forecaster.md
scripts/: audit-harness  cleanup-doc-filing-v3.sh  run_nixtla_review_baseline.sh  run_nixtla_review_timegpt.sh  setup-dev-environment.sh  setup-gcp-nixtla-playground.sh  validate-marketplace.sh  validate_skills.py
templates/: 01-BUSINESS-CASE-TEMPLATE.md  02-PRD-TEMPLATE.md  03-ARCHITECTURE-TEMPLATE.md  04-USER-JOURNEY-TEMPLATE.md  05-TECHNICAL-SPEC-TEMPLATE.md
(+1101 files in other folders)
